Doc: Fix headers ghost element covering link above
The links before and after the headings won’t work because there were
invisible before and after elements covering them

--- a/src/layouts/Doc/Doc.css
+++ b/src/layouts/Doc/Doc.css
@@ -224,8 +224,6 @@ $contentLeftPadding: 70px;
     &:before {
       display: block;
       content: " ";
-      margin-top: -80px;
-      height: 80px;
       visibility: hidden;
     }
   }
@@ -440,8 +438,6 @@ strong {
       &:before {
         display: block;
         content: " ";
-        margin-top: -80px;
-        height: 80px;
         visibility: hidden;
       }
     }
